Fix a bunch of alignment issues
For example, the title wouldn't properly right align because the div
containing the text wasn't large enough.

Next, implementing parallax.

--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,9 @@ html, body {
 }
 
 .register {
-    width: 120px;
+    width: 278px;
     text-align: center;
-    padding: 15px 20px;
+    padding: 15px 0;
     background: pink;
     color: black;
     font-weight: 600;
@@ -52,8 +52,7 @@ html, body {
 }
 
 .title {
-    font-family: 'Cabin Sketch';
-    font-weight: 200;
+    font-family: 'Share Tech Mono';
 }
 
 .off {
@@ -80,14 +79,14 @@ html, body {
     background-color: #484848;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 950px) {
     .section {
         position: relative;
     }
 
     .left {
         box-sizing: border-box;
-        width: 60%;
+        width: calc(80vw - 278px);
         height: 100vh;
         min-height: 100vh;
         display: inline-block;
@@ -98,7 +97,7 @@ html, body {
         box-sizing: border-box;
         padding: 100px;
         padding-right: 150px;
-        width: 40%;
+        width: calc(20vw + 278px);
         height: 100vh;
         min-height: 100vh;
         display: inline-block;
@@ -127,8 +126,6 @@ html, body {
     }
 
     .register {
-        position: absolute;
-        right: 150px;
         margin-top: 90px;
     }
 
@@ -136,11 +133,15 @@ html, body {
         position: relative;
         top: 50%;
         transform: translateY(-50%);
-        width: 80%;
+        width: 40vw;
     }
 
     .title {
         font-size: 4em;
+    }
+
+    .title-align {
+      width: 278px;
     }
 
     .year {
@@ -153,7 +154,7 @@ html, body {
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 950px) {
     .section {
         display: flex;
         flex-direction: column;
@@ -162,17 +163,21 @@ html, body {
     }
 
     .left {
+        width: 100vw;
         padding-top: 30px;
     }
 
     .right {
-        max-width: 75vw;
+        width: 100vw;
         margin: 0 auto;
         padding-bottom: 30px;
     }
 
     .otherinfo {
         margin-top: 30px;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .register {
@@ -188,6 +193,9 @@ html, body {
 
     .title {
         font-size: 2em;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .year {
